# bazel-stm32

./: WORKSPACE.bazel
boards/f407g_disc1/: BUILD.bazel  memory.x
examples/f4disco_ledblink/: BUILD.bazel  README.md  cpp_test.cpp  cpp_test.h  main.cpp
examples/f4disco_ledblink/st/inc/STM32F4xx/: system_stm32f4xx.h
examples/f4disco_ledblink/st/src/STM32F4xx_StdPeriph_Driver/: stm32f4xx_gpio.c  stm32f4xx_rcc.c
examples/f4disco_mems_external/: BUILD.bazel  README.md  main.cpp
examples/minimal/: README.md  main.cpp
examples/semihosting/: BUILD.bazel
src/MEMS_LSM9DS1/: BUILD.bazel
src/MEMS_LSM9DS1/inc/: LSM9DS1_Types.h  SparkFunLSM9DS1.h
src/MEMS_LSM9DS1/src/: SparkFunLSM9DS1.cpp
src/from_st/: BUILD.bazel
src/from_st/src/: system_stm32f4xx.c
src/from_st/src/STM32F4xx_StdPeriph_Driver/: stm32f4xx_i2c.c
src/startup/: BUILD.bazel  startup_f407g_disc1.cpp
src/stm32_i2c/: BUILD.bazel  README.md
src/stm32_i2c/inc/: stm32_i2c.h
