load("@stm32//:rules.bzl", "stm32_binary")

stm32_binary(
    name = "f4disco_ledblink",
    srcs = [
        "main.cpp",
        "cpp_test.h",
        "cpp_test.cpp",
    ],
    includes = [
        ".",
    ],
    startup = "f407g_disc1",
    copts = ["-std=c++20"],
    deps = ["@stm32//src/from_st:f407g_disc1_gpio"],
)
