load("@stm32//:rules.bzl", "stm32_binary")

stm32_binary(
    name = "f4disco_mems_external",
    srcs = [
        "main.cpp",
    ],
    includes = [
        ".",
    ],
    startup = "f407g_disc1",
    copts = ["-std=c++20", "-O0"],
    deps = [
        "@stm32//src/from_st:f407g_disc1_i2c",
        "@stm32//src/MEMS_LSM9DS1",
    ],
)
