load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "f407g_disc1_clock",
    srcs = [
        "inc/system_stm32f4xx.h",
        "src/system_stm32f4xx.c",
        "inc/stm32f4xx.h",
        "inc/CMSIS/core_cm4.h",
        "inc/CMSIS/core_cmInstr.h",
        "inc/CMSIS/core_cmFunc.h",
        "inc/CMSIS/core_cm4_simd.h",
    ],
    includes = [
        "inc",
        "inc/CMSIS",
    ],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "f407g_disc1_gpio",
    srcs = [
        "inc/STM32F4xx_StdPeriph_Driver/stm32f4xx_gpio.h",
        "src/STM32F4xx_StdPeriph_Driver/stm32f4xx_gpio.c",
        "inc/STM32F4xx_StdPeriph_Driver/stm32f4xx_rcc.h",
        "inc/stm32f4xx_conf.h",
        "inc/stm32f4xx.h",
        "inc/CMSIS/core_cm4.h",
        "inc/CMSIS/core_cmInstr.h",
        "inc/CMSIS/core_cmFunc.h",
        "inc/CMSIS/core_cm4_simd.h",
        "inc/STM32F4xx/system_stm32f4xx.h",
        "src/STM32F4xx_StdPeriph_Driver/stm32f4xx_rcc.c",
    ],
    includes = [
        "inc/STM32F4xx_StdPeriph_Driver/",
        "inc/",
        "inc/CMSIS/",
        "inc/STM32F4xx/",
    ],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "f407g_disc1_i2c",
    srcs = [
        "inc/STM32F4xx_StdPeriph_Driver/stm32f4xx_i2c.h",
        "src/STM32F4xx_StdPeriph_Driver/stm32f4xx_i2c.c",
    ],
    includes = [
        "inc/STM32F4xx_StdPeriph_Driver/",
    ],
    deps = [
        "f407g_disc1_gpio"
    ],
    copts = [
        "-Wno-error=conversion",
    ],
    linkstatic = True,
    visibility = ["//visibility:public"],
)
