load("@rules_cc//cc:defs.bzl", "cc_library")

# TODO write a better startup script

cc_library(
    name = "f407g_disc1",
    srcs = [
        "startup_f407g_disc1.cpp",
    ],
    deps = [
        ":f407g_disc1_st_code",
    ],
    linkstatic = True,
    visibility = ["//visibility:public"],
    copts = ["-std=c++20"],
)

cc_library(
    name = "f407g_disc1_st_code",
    srcs = [
        "st/inc/system_stm32f4xx.h",
        "st/src/system_stm32f4xx.c",
        "st/inc/stm32f4xx.h",
        "st/inc/CMSIS/core_cm4.h",
        "st/inc/CMSIS/core_cmInstr.h",
        "st/inc/CMSIS/core_cmFunc.h",
        "st/inc/CMSIS/core_cm4_simd.h",
    ],
    includes = [
        "st/inc",
        "st/inc/CMSIS",
    ],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "startup",
    srcs = [
        "startup.cpp",
        "startup_ARMCM3.S",
    ],
    linkstatic = True,
    local_defines = [
        "__NO_SYSTEM_INIT",
        "__START=start",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "semihosting",
    srcs = [
        "startup_ARMCM3.S",
        "startup_semihosting.cpp",
    ],
    linkstatic = True,
    local_defines = [
        "__NO_SYSTEM_INIT",
        "__START=start",
    ],
    visibility = ["//visibility:public"],
    deps = ["@arm_none_eabi//libs:semihosting"],
)
