load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "stm32_i2c",
    hdrs = [
            "inc/stm32_i2c.h",
    ],
    deps = [
        "@static_vector",
        "@stm32//src/from_st:f407g_disc1_i2c",
    ],
    strip_include_prefix = "inc",
    visibility = ["//visibility:public"],
)
